# Before-morning-coffee

./: .gitignore  README.md  pyproject.toml  requirements.txt  telegram.json
BeforeMorningCoffee/: db.sqlite3  manage.py
BeforeMorningCoffee/BeforeMorningCoffee/: asgi.py  settings.py  urls.py  wsgi.py
BeforeMorningCoffee/MainApp/: views.py
BeforeMorningCoffee/MainApp/static/MainApp/css/: index.css
BeforeMorningCoffee/MainApp/static/MainApp/js/: index.js
BeforeMorningCoffee/MainApp/templates/MainApp/: index.html
server/: server.py
