[tool.poetry]
name = "before-morning-coffee"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "before_morning_coffee"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
websockets = "^10.4"
psycopg-binary = "^3.1.8"
aiohttp = "^3.8.4"
psycopg = {extras = ["binary"], version = "^3.1.8"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
